apps/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingresses
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    argocd.argoproj.io/sync-wave: "3"
spec:
  rules:
  # This is the Grafana ingress, which is used to route traffic to the Grafana service.
  - host: grafana.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-grafana
              port: { number: 80 }
  
  # This is the MinIO ingress, which is used to route traffic to the MinIO service.
  - host: minio-console.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio-console
              port: { number: 9001 }
  
  # This is the Loki ingress, which is used to route traffic to the Loki service.
  - host: loki-gateway.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: loki-gateway
              port: { number: 80 }

  # This is the frontend-proxy ingress, which is used to route traffic to the frontend-proxy service. 
  # The frontend-proxy service is a reverse proxy that routes traffic to the appropriate backend service based on the request path.  
  - host: shop.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-proxy
              port: { number: 8080 }
---

# Ingress for Argo CD
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    argocd.argoproj.io/sync-wave: "3"
spec:
  rules:
  - host: argocd.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port: { number: 80 }
